Fixed popup overflowing body bug

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -837,6 +837,7 @@ a {
 
 .popup {
   position: fixed;
+  right: 0;
   bottom: 0;
 
   width: 230px;
